@@ -1,6 +1,8 @@
 Revision history for File::DataClass
 
 0.11.
+         - Made JSON untaint the data it reads
+         - Moved F::DC::Storage::extensions to F::DC::Util
          - Fixed using F::DC::Storage::WithLanguage with F::DC::S::Any
          - F::DC::Schema::translate defaults to storage class Any
          - Fixed bug in update detection logic
